[package]
name = "frost-aggregator"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
reqwest = { version = "0.11", features = ["json", "tokio-rustls"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# FROST crates
frost-core = { version = "2.1.0", default-features = false, features = ["serde"] }
frost-ed25519 = { version = "2.1.0", default-features = false, features = ["serde"] }
rand = "0.8"
clap = { version = "4", features = ["derive"] } 