[package]
name = "frost-ed25519-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
# Core FROST implementation (Zcash IETF draft reference)
frost-core = "2.1.0"
frost-ed25519 = "2.1.0"

# Crypto RNG helpers
rand = "0.8"
rand_core = "0.6"

# CLI / serialization helpers
clap = { version = "4.4", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
base64 = "0.21" 
anyhow = "1.0" 
ed25519-dalek = "1.0" 
bs58 = "0.4" 