[package]
name = "frost-keygen"
version = "0.1.0"
edition = "2024"

[dependencies]
serde         = { version = "1.0", features = ["derive"] }
serde_json    = "1.0"
frost-core    = { version = "2.1.0", default-features = false, features = ["serde"] }
frost-ed25519 = { version = "2.1.0", default-features = false, features = ["serde"] }
ed25519-dalek = "1.0"
anyhow        = "1.0"
