[package]
name = "frost-signer-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
# HTTP server stack
axum = { version = "0.6", features = ["json"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

# FROST (threshold Ed25519) crates – compiled without Solana so zeroize ≥1.5 is fine
frost-core = { version = "2.1.0", default-features = false, features = ["serde"] }
frost-ed25519 = { version = "2.1.0", default-features = false, features = ["serde"] }
rand_core = "0.6"
hex = "0.4" 
rand = { version = "0.8", features = ["std"] } 