[package]
name = "solana-frost-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow         = "1.0"
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
hex            = "0.4"
bs58           = "0.4"
clap           = { version = "4.4", features = ["derive"] }
solana-client  = "1.18"
solana-sdk     = "1.18"
rand           = "0.8"
rand_core      = "0.6"
curve25519-dalek = { version = "3.2.1", default-features = false, features = ["u64_backend"] }
sha2 = "0.9" 