[package]
name = "solana-mpc-transfer"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow       = "1"
serde        = { version = "1", features = ["derive"] }
serde_json   = "1"
hex          = "0.4"

# Solana stack (no FROST here)
solana-client = "1.18.26"        # pulls solana-sdk, solana-program, … 
# direct deps used in main.rs
clap = { version = "4", features = ["derive"] }
solana-sdk = "1.18.26" 